★大規模アップデート（2026/06/11）